--- a/static/styles/my_orders.css
+++ b/static/styles/my_orders.css
@@ -32,7 +32,7 @@
 }
 
 /* Style each individual order */
-.order-items-inner-container {
+.inner-container {
     border: 1px solid gray;
     border-radius: 8px;
     padding: 15px;
