--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,18 +7,19 @@
 </head>
 <body class="signup-page-body">
 
-   <div class="signup-page-header">
-    <h1><img src="static/images/flavour-fusion-icon.png" alt="category image" id="flavour-fusion-icon">{{ service_name }}</h1>
+   <div class="page-header">
+    <h1><a href="/"><img src="static/images/flavour-fusion-icon.png" alt="category image" id="flavour-fusion-icon">
+    {{ service_name }}</a></h1>
     <form method="POST">
         <div class="search-form-group">
             <input type="text" name="search-input" id="search-parameter" placeholder="Search by Restaurant/zipcode" required>
-            <input class="search-button" type="submit" formaction="/get-restaurants" value="Search">
+            <input class="button" type="submit" formaction="/get-restaurants" value="Search">
         </div>
     </form>
 </div>
 
 
-    <div class="signup-page-container">
+    <div class="inner-container">
         <h2>{{ action }}</h2>
         <form action="/signup" method="post">
             <div class="form-format">
@@ -88,7 +89,7 @@
             </div>
 
             <div class="signup-button-container">
-                <input class="signup-button" type="submit" formaction="/submit-form" value="Sign up">
+                <input class="button" type="submit" formaction="/submit-form" value="Sign up">
             </div>
         </form>
     </div>
