Cleaned code base.

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,7 @@
                     <div class="dropdown-content" id="dropdown-content">
 
                         <div class="dropdown-element"><a href="view-my-orders">My Orders</a></div>
+                        <div class="dropdown-element"><a href="show-reservations">My Reservations</a></div>
                         <form class="dropdown-element" id="dropdown-element" action="/logout" method="post">
                             <input type="submit" value="Logout" class="dropdown-element-logout">
                         </form>
