--- a/templates/order_checkout.html
+++ b/templates/order_checkout.html
@@ -13,19 +13,19 @@
                 <h3><p class="form-section-label">Account Details</p></h3>
                 <div class="input-group">
                     <label class="name-label">First Name:</label>
-                    <input type="text" name="first_name" value="{{ first_name }}">
+                    <input type="text" name="first_name" value="{{ user.first_name }}" required>
                 </div>
                 <div class="input-group">
                     <label class="name-label">Last Name:</label>
-                    <input type="text" name="last_name" value="{{ last_name }}">
+                    <input type="text" name="last_name" value="{{ user.last_name }}" required>
                 </div>
                 <div class="input-group">
                     <label class="name-label">Email:</label>
-                    <input type="text" name="email" value="{{ email }}">
+                    <input type="text" name="email" value="{{ user.email }}" required>
                 </div>
                 <div class="input-group">
                     <label class="name-label">Contact:</label>
-                    <input type="text" name="contact" value="{{ contact }}">
+                    <input type="text" name="contact" value="{{ user.contact }}" required>
                 </div>
             </div>
 
@@ -33,15 +33,15 @@
                 <h3><p class="form-section-label">Address</p></h3>
                 <div class="input-group">
                     <label class="address-label">Address:</label>
-                    <input type="text" name="address" >
+                    <input type="text" name="address" value="{{ user.address }}" required>
                 </div>
                 <div class="input-group">
                     <label class="address-label">Unit / Suite:</label>
-                    <input type="text" name="unit_suite" >
+                    <input type="text" name="unit_suite" value="{{ user.unit_suite }}" required>
                 </div>
                 <div class="input-group">
                     <label class="address-label">State:</label>
-                    <input type="text" name="state" >
+                    <input type="text" name="state" required>
                 </div>
                 <div class="input-group">
                     <label class="address-label">Zip:</label>
