Cleaned code base.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,8 +8,7 @@
 <body class="layout-page-body">
 
    <div class="page-header">
-        <h1><a href="/"><img src="static/images/flavour-fusion-icon.png" alt="category image" id="flavour-fusion-icon">
-            {{ service_name }}</a></h1>
+        <h1><a href="/"><img src="static/images/flavour-fusion-icon.png" alt="category image" id="flavour-fusion-icon">{{ service_name }}</a></h1>
 
        <div class="header-inner-group">
            <form method="POST">
