--- a/static/styles/make_reservation.css
+++ b/static/styles/make_reservation.css
@@ -1,11 +1,6 @@
 @import url("parent.css");
 
-
-.make-reservation-page-body{
-    background-image: url('../images/menu-page-wallpaper.jpg');
-    color: white;
-}
-
+/* form containing details to input */
 .inner-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -16,15 +11,21 @@
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
 }
+
+/* reservation form labels */
 label {
     display: block;
     margin-bottom: 8px;
 }
+
+/* select attributes from form */
 select {
     width: calc(100% - 18px);
     padding: 8px;
     margin-bottom: 20px;
 }
+
+/* common attributes for form input fields */
 .form-group > input[type="text"], .form-group > input[type="email"], .form-group > input[type="number"],
 .form-group > input[type="tel"], .form-group > input[type="date"] {
     width: calc(100% - 18px);
@@ -32,14 +33,17 @@ select {
     margin-bottom: 20px;
 }
 
+/* container for each input field */
 .form-group {
     margin-bottom: 20px;
 }
 
+/* 'Book you slot' button */
 .button {
     grid-column: span 2;
 }
 
+/* validation messages if displayed */
 #error{
     text-align: center;
 }
