--- a/templates/show_reservations.html
+++ b/templates/show_reservations.html
@@ -4,7 +4,7 @@
      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
      <link rel="stylesheet" type="text/css" href="/static/styles/show_reservations.css">
 
-<body class="menu-page-body">
+<body class="show-reservations-page-body">
 
 <div class="upcoming-reservations-label">Upcoming Reservations...</div>
 <form action="/cancel_reservation" method="post" class="cancel-reservation-form" id="cancel-reservation-form">
